--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=11, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-with">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Rashed Islam</span> world</h1>
+            <h3>Build climber and train stopper</h3>
+            <p>The L3Harris BANSHEE system provides a protected and assured networked data link for advanced collaborative swarming weapons. The weapons data link is optimized to provide robust communications for the control systems of cruise missiles.protected
+                and assured networked data link for advanced collaborative swarming weapons. The weapons data link is optimized to provide robust communications for the control systems of cruise missiles
+            </p>
+            <a class="link-button" target="_blank" href="http://https://www.linkedin.com/in/rashedul-islam-1126741b2/"> Hire Me</a>
+        </div>
+        <div class="half-with"><img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
