--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-with">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Rashed Islam</span> world</h1>
@@ -26,6 +26,40 @@
         <div class="half-with"><img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big flexible-container">
+        <div class="half-with">
+            <img src="images/jhankar2.png" alt=""> </div>
+        <div class="half-with">
+            <h1>Dream Big</h1>
+            <h2>Becoming a web developer</h2>
+            <p>In the world of software programming, it helps to have someone on the team who is something of a jack of all trades. They can help with various stages of development and have the versatility and time management to assist all levels of the
+                development team. When it comes to web development, that role belongs to the Full Stack Developer. This is not a Back End or Front End developer, but someone who handles both — a “Full Stack,” as it were.</p>
+            <a class="link-button" target="_blank" href="http://https://www.facebook.com/profile.php?id=100067002396011">DOWNLOAD RESUME</a>
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="expe-with">
+                <h1 id="full-dev">Full stack web developer</h1>
+                <h3 class="orange-color">2022 | present pro level</h3>
+                <p>t depends on the size and scalability of the software. For instance, a small independent game group made up of only a few people creating a small simulator could have one Back End Developer and one Front End Developer and that might be
+                    all they need for the development.</p>
+            </div>
+            <div class="expe-with">
+                <h1 id="baby-dev">Baby web developer</h1>
+                <h3 class="orange-color">2022-22 | hero programmer</h3>
+                <p>t depends on the size and scalability of the software. For instance, a small independent game group made up of only a few people creating a small simulator could have one Back End Developer and one Front End Developer and that might be
+                    all they need for the development.</p>
+            </div>
+
+        </div>
+        </sectio>
+        <footer>
+            <p>Rashedul@ hero pro developer</p>
+        </footer>
 </body>
 
 </html>
